fix clipping

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
     position: fixed;
     background-color: #eee;
     border-bottom: 5px solid #33435a;
+    z-index: 100;
 }
 
 .header--links {
@@ -47,12 +48,15 @@
     background-image: linear-gradient(60deg,rgba(0,158,237,0.8),rgba(0,193,246,0.5)), url(https://steamuserimages-a.akamaihd.net/ugc/1021696350890670757/52839CD94B2097441B99A3DF29FC9C48F6986427/?imw=5000&imh=5000&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false);
     height: 100vh;
     border-bottom: 5px solid #000;
+    position: relative;
+    
 }
 
 .welcoming--wrapper {
     display: flex;
     padding: 200px;
     padding-top: 350px;
+
 }
 
 .welcoming--text {
@@ -105,6 +109,7 @@
 .group--section {
     text-align: center;
     margin-top: 250px;
+    padding-top: 50px;
     background-color: white;
     position: relative;
 }
